# krecipes

./: CMakeLists.txt
doc/: CMakeLists.txt
icons/: CMakeLists.txt
src/: CMakeLists.txt  convert_sqlite3.cpp  convert_sqlite3.h  klomanager.cpp  krecipes.cpp  krecipes.h  krecipesview.cpp  krecipesview.h  main.cpp  mmdata.h  profiling.h  propertycalculator.cpp
src/actionshandlers/: actionshandlerbase.cpp  actionshandlerbase.h  krecategoryactionshandler.cpp  krecategoryactionshandler.h  kregenericactionshandler.cpp  kregenericactionshandler.h  kreheaderactionshandler.cpp  krepropertyactionshandler.cpp  krerecipeactionshandler.cpp  krerecipeactionshandler.h  kreunitactionshandler.cpp  recipeactionshandler.cpp  recipeactionshandler.h
src/backends/: progressinterface.cpp  progressinterface.h  qsqlrecipedb.cpp  qsqlrecipedb.h  recipedb.cpp  recipedb.h  usda_ingredient_data.cpp  usda_ingredient_data.h  usda_property_data.cpp  usda_unit_data.cpp  usda_unit_data.h
src/backends/MySQL/: mysqlrecipedb.cpp  mysqlrecipedb.h
src/backends/PostgreSQL/: psqlrecipedb.cpp
src/backends/SQLite/: literecipedb.cpp  literecipedb.h
src/datablocks/: categorytree.cpp  ingredient.cpp  ingredientlist.cpp  ingredientlist.h  mixednumber.cpp  mixednumber.h  unit.cpp
src/dialogs/: advancedsearchdialog.cpp  advancedsearchdialog.h  authorsdialog.cpp  authorsdialog.h  borderdialog.cpp  borderdialog.h  categorieseditordialog.cpp  categorieseditordialog.h  conversiondialog.cpp  conversiondialog.h  createcategorydialog.cpp  createcategorydialog.h  createelementdialog.cpp  createelementdialog.h  createingredientweightdialog.cpp  createingredientweightdialog.h  createpropertydialog.cpp  createpropertydialog.h  createunitconversiondialog.cpp  createunitconversiondialog.h  createunitdialog.cpp  createunitdialog.h  dbimportdialog.cpp  dbimportdialog.h  dependanciesdialog.cpp  dependanciesdialog.h  editpropertiesdialog.cpp  editpropertiesdialog.h  ingredientgroupsdialog.cpp  ingredientgroupsdialog.h  ingredientmatcherdialog.cpp  ingredientmatcherdialog.h  ingredientsdialog.cpp  ingredientsdialog.h  pagesetupdialog.cpp  pagesetupdialog.h  prepmethodsdialog.cpp  prepmethodsdialog.h  propertiesdialog.cpp  propertiesdialog.h  (+22 more)
src/dialogs/dietwizard/: dietviewdialog.cpp  dietviewdialog.h  dietwizarddialog.cpp  dietwizarddialog.h  dishinput.cpp  dishinput.h  mealinput.cpp  mealinput.h
src/dialogs/preferences/: importprefs.cpp  krecipespreferences.cpp  mysqlserverprefs.cpp  mysqlserverprefs.h  numberprefs.cpp  performanceprefs.cpp  performanceprefs.h  postgresqlserverprefs.cpp  postgresqlserverprefs.h  serverprefs.cpp  spellcheckingprefs.cpp  sqliteserverprefs.cpp
src/dialogs/recipeinput/: amountdelegate.cpp  editratingdialog.cpp  editratingdialog.h  ingredientparserdialog.cpp  ingredientparserdialog.h  prepmethoddelegate.cpp  ratingdisplaywidget.ui  ratinglisteditor.cpp  ratinglisteditor.h  recipegeneralinfoeditor.cpp  recipeinputdialog.cpp  recipeinputdialog.h  resizerecipedialog.cpp  resizerecipedialog.h  selectauthorsdialog.cpp  selectauthorsdialog.h  selectcategoriesdialog.cpp  selectcategoriesdialog.h  unitdelegate.cpp
src/dialogs/setupassistant/: datainitializepage.cpp  dbtypesetuppage.cpp  permissionssetuppage.cpp  permissionssetuppage.h  psqlpermissionssetuppage.cpp  psqlpermissionssetuppage.h  savepage.cpp  serversetuppage.cpp  serversetuppage.h  setupassistant.cpp  sqlitesetuppage.cpp  sqlitesetuppage.h  welcomepage.cpp
src/exporters/: baseexporter.cpp  baseexporter.h  cookmlexporter.cpp  htmlexporter.cpp  kreexporter.cpp  mmfexporter.cpp  mx2exporter.cpp  mx2exporter.h  plaintextexporter.cpp  recipemlexporter.cpp  rezkonvexporter.cpp  xsltexporter.cpp
src/importers/: baseimporter.cpp  baseimporter.h  kredbimporter.cpp  kreimporter.cpp  kreimporter.h  mmfimporter.cpp  mx2importer.cpp  mxpimporter.cpp  nycgenericimporter.cpp  recipemlimporter.cpp  rezkonvimporter.cpp
src/nukedb/: main.cpp  nukeconfigwidget.cpp
src/tests/database/: authors.cpp  authors.h  encoding.cpp  encoding.h
src/tests/datablocks/: mixednumber.cpp  mixednumber.h  mixednumberrange.cpp  mixednumberrange.h  rating.cpp  rating.h  ratingcriteria.cpp  ratingcriteria.h  unit.cpp  unit.h  unitratio.cpp  unitratio.h  unitratiolist.cpp  unitratiolist.h  weight.cpp  weight.h  yield.cpp  yield.h
src/tests/import-export/: kretest.cpp  mmftest.cpp  mx2test.cpp  mxptest.cpp  nyctest.cpp  recipemltest.cpp  rezkonvtest.cpp
src/tests/ui/: ingredientseditor.cpp
src/threadedqueries/: loadingauthorsthread.cpp
src/widgets/: amountunitinput.cpp  amountunitinput.h  categorycombobox.cpp  categorylistview.cpp  categorylistview.h  clickablelabel.cpp  criteriacombobox.cpp  dblistviewbase.cpp  dblistviewbase.h  fractioninput.cpp  fractioninput.h  headercombobox.cpp  imagedroplabel.cpp  inglistviewitem.cpp  inglistviewitem.h  ingredientcombobox.cpp  ingredientlistview.cpp  ingredientlistview.h  kdateedit.cpp  kdatepickerpopup.cpp  kreauthorlistwidget.cpp  krecategorieslistwidget.cpp  kreconversiontable.cpp  kregenericlistwidget.cpp  kregenericlistwidget.h  kreheaderlistwidget.cpp  kreingredientlistwidget.cpp  krelistview.cpp  krelistview.h  kremenu.cpp  kremenu.h  kreprepmethodlistwidget.cpp  kreprepmethodlistwidget.h  krepropertylistwidget.cpp  krerecipeslistwidget.cpp  kresearchresultlistwidget.cpp  kretextedit.cpp  kretextedit.h  paneldeco.cpp  prepmethodcombobox.cpp  (+7 more)
